--- a/mservices/reader/Dockerfile
+++ b/mservices/reader/Dockerfile
@@ -1,14 +1,14 @@
-FROM python:2.7-slim  AS build-env
+FROM python:3.7-slim  AS build-env
 
 COPY reader.py requirements.txt /app/
 WORKDIR /app
 
 RUN pip install -t packages --upgrade pip && \
-    pip install -t packages -r ./requirements.txt
+    pip install -t packages --upgrade -r requirements.txt
 
-FROM gcr.io/distroless/python2.7
+FROM gcr.io/distroless/python3-debian10
 COPY --from=build-env /app /app
 
 WORKDIR /app
 ENV PYTHONPATH=/app/packages
-CMD [ "reader.py" ]
+CMD [ "packages/bin/gunicorn", "-w 3", "-b :80", "--access-logfile=-", "reader:app" ]
