--- a/mservices/reader/requirements.txt
+++ b/mservices/reader/requirements.txt
@@ -1,7 +1,9 @@
-Click==7.0
-Flask==1.0.2
+click==7.1.2
+Flask==1.1.2
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.11.2
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
-Werkzeug==0.15.3
+Werkzeug==1.0.1
+gunicorn==19.10.0
+setuptools==44.1.1
