--- a/mservices/reader/requirements.txt
+++ b/mservices/reader/requirements.txt
@@ -1,9 +1,11 @@
 click==7.1.2
 Flask==1.1.2
+gevent==20.9.0
+greenlet==0.4.17
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
 Werkzeug==1.0.1
-gunicorn==19.10.0
-setuptools==44.1.1
+zope.event==4.5.0
+zope.interface==5.1.2
